<resources>
    <string name="app_name">Login_app_mvp_mvvm</string>
    <string name="text_content_description_poster_login_image_view">Image Login</string>
    <string name="text_title_login_text_view">Login</string>
    <string name="text_hint_field_username_edit_text">Username</string>
    <string name="text_hint_field_password_edit_text">Password</string>
    <string name="text_action_forgot_password_text_view">Forgot Password?</string>
    <string name="text_action_log_in_button">Log In</string>
    <string name="text_action_sign_up_button">Sign Up</string>

    <string name="result_login_success">You are logged in!</string>


</resources>